# Symulator-wieloagentowy

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.sln  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile2  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  create  debug.vcxproj  debug.vcxproj.filters  release.vcxproj  release.vcxproj.filters
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app.dir/Debug/app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
headers/: agent.hpp  console.hpp  distance.hpp  elements.hpp  exception.hpp  general.hpp  graph.hpp  headers.hpp  json-output.hpp  output.hpp  rand.hpp  simulation.hpp  thread.hpp
inline-sources/: agent.cpp  console.cpp  elements.cpp  general_defaults.cpp  graph.cpp  inline_agent.cpp  inline_console.cpp  inline_distance.cpp  inline_elements.cpp  inline_general.cpp  inline_graph.cpp  inline_rand.cpp  inline_simulation.cpp  inline_thread.cpp  simulation.cpp
sources/: agent.cpp  console.cpp  distance.cpp  elements.cpp  exception.cpp  graph.cpp  json-output.cpp  main.cpp  simulation.cpp  variants.txt
sources/server/: server.py  server2.py
